Fixed text-wrapping issue

--- a/style.css
+++ b/style.css
@@ -79,7 +79,6 @@ body {
 }
 
 .chopping-board {
-    
     background-image: url("images/chopping-board.jpg");
     background-size: cover;
     background-position: center;
@@ -91,7 +90,7 @@ body {
     justify-content: center;
     align-items: center;
     
-    box-sizing: border-box;
+    box-sizing: border-box; /*! Prevents chopping-board from overflowing whole page */ 
     width: 100%;
     padding: 30px;
 
@@ -99,14 +98,16 @@ body {
 }
 
 .sub-heading {
-    font-size: 2rem;
     color: rgba(255, 235, 200, 0.8);
+    font-size: 3rem;
 }
 .heading {
-    font-size: 4rem;
     color: var(--primary-text-color);
-    text-wrap: nowrap;
-    width: min-content;
+    font-size: 5rem;
+    text-align: center;
+    text-wrap: wrap;
+
+    width: 100%;
 }
 
 .searchbar {
@@ -156,7 +157,7 @@ body {
     width: 100%;
     pointer-events: none;
     z-index: 1;
-} #title-svg-wrapper {
+} #title-border-svg-wrapper {
     position: relative;
     top: -84.3px;
     height: 86.3px; /** just the height of the path */
@@ -248,6 +249,12 @@ body {
     .title-page-contents {
         width: 600px;
     }
+    .sub-heading {
+        font-size: 2rem;
+    }
+    .heading {
+        font-size: 3rem;
+    }
 }
 
 
@@ -255,7 +262,6 @@ body {
 @media only screen and (max-width: 768px) {
     .title-page-container {
         height: 60vh;
-
     }
     .title-page-contents {
         width: 500px;
